# explore

./: LICENSE
rust/gcs/: Cargo.toml
rust/gcs/src/: main.rs
rust/repeat/: Cargo.toml
rust/repeat/src/: main.rs
rust/tui/: .gitignore  Cargo.toml  repeat  repeat.sh
rust/tui/src/: app.rs  args.rs  buffer.rs  buffer_manager.rs  color_window.rs  debug_window.rs  file_manager_window.rs  help_window.rs  key_const.rs  log_window.rs  logging.rs  main.rs  proc.rs  program_window.rs  search_window.rs  tabs_window.rs  terminal_window.rs  text_buffer.rs  text_window.rs  ui.rs  util.rs  window.rs  window_wip.rs
rust/tui/src/ui/: app_ui.rs  debug_ui.rs  file_manager_ui.rs  help_ui.rs  log_ui.rs  mod.rs  search_ui.rs  terminal_ui.rs  text_editor_ui.rs
