[package]
name = "gcs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#hyper = { version = "0.14", features = ["full"] }
hyper = { version = "0.13.4", default-features = false, features = ["stream"] }
#hyper = { version = "0.13.4", default-features = true, features = ["full"] }
#hyper = { version = "0.14", default-features = false, features = ["stream"] }
hyper-tls = "0.4.0"
#tokio = { version = "1", features = ["full"] }
#tokio = { version = "0.2.16", default-features = true }
tokio = { version = "0.2.16", default-features = false, features = ["full"] }

