[package]
name = "tui-test"
version = "0.1.0"
authors = ["nthparameter <nthparameter@gmail.com>"]
edition = "2018"
#debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.4"
async-std = "1.8.0"
futures = "0.3.8"

crossterm="0.19"
tui={version="0.13", features=["crossterm"], default-features=false}
lazy_static = "*"
log = { version = "0.4.11", features = ["std"] }

bitflags = "1.0"
cassowary = "0.3"
more-asserts = "0.2.1"
rand = "0.7"
regex = "1.4.3"
unicode-segmentation = "1.2"
unicode-width = "0.1"
